# yaml-guard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/: copilot-instructions.md
.github/workflows/: api-ci.yml  ci.yml  container.yml  frontend-build.yml  yaml-guard.yml
examples/: azure-pipelines.yml  circleci-config.yml  github-workflow.yml  gitlab-ci.yml  multi-doc-pods.yaml  pod-bad-structured.yaml  pod-bad.yaml  pod-good-detailed.yaml  pod-good.yaml  pod-mixed.yaml  pod-with-secrets-leak.yaml
policies/cicd/: github.yaml
policies/k8s/: core.yaml
policies/security/: secrets.yaml
scripts/: build_and_serve_ui.py  smoke_requests.py  smoke_validate.py  start_all.py
src/yamlguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/yamlguard/cli/: main.py
src/yamlguard/core/: __init__.py  jsonpath.py  loader.py  locate.py  optimize.py  recommend.py  rules.py
src/yamlguard/server/: main.py
tests/: test_api_e2e.py  test_autoload.py  test_rules.py  test_secrets.py
ui/: .env.production  .eslintrc.cjs  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/public/: _headers
ui/src/: App.tsx  styles.css  types.ts
ui/src/api/: client.ts  mock.ts
ui/src/components/: CIConverter.tsx  EmptyState.tsx  ErrorState.tsx  FileDrop.tsx  FindingsTable.tsx  Header.tsx  Loading.tsx  PoliciesList.tsx  PolicyList.tsx  PolicyViewer.tsx  SuggestionsPanel.tsx  ValidationResults.tsx  YamlEditor.tsx
ui/src/context/: ValidationContext.tsx
ui/src/hooks/: useHealth.ts  usePolicies.ts  (+1 more)
(+6 files in other folders)
